--- a/hartchart.html
+++ b/hartchart.html
@@ -204,7 +204,7 @@
         if (found.length > 0) {
 
           let coords = found[Math.floor(Math.random() * found.length)];
-          console.log(c, coords.id);
+          // console.log(c, coords.id);
           codeout.innerHTML += "[" + coords.id.replace(/^slot/, "") + "] &nbsp; ";
 
         } else {
