--- a/index.html
+++ b/index.html
@@ -90,6 +90,13 @@
       </ul>
     </li>
     <li>Scan the QR code with a mobile device to mirror the chart to do the near/far accommodation exercise.</li>
+    <li>Decoding exercise
+      <ul>
+        <li>Work in progress</li>
+        <li>Corresponding row/column is highlighted when hovering over each code item.</li>
+        <li>Full answer is displayed when hovering over the code for a couple seconds.</li>
+      </ul>
+    </li>
   </ul>
 
   <h3><a href="lettertracking.html">Letter Tracking exercise</a></h3>
