--- a/tranaglyphs.html
+++ b/tranaglyphs.html
@@ -35,16 +35,23 @@
       top: 3em;
       --delta: 0;
       --units: 1cm;
-*{ mix-blend-mode: difference;}
+
+      * {
+        mix-blend-mode: difference;
+      }
     }
 
 
     #circles.fusion {
-     /* filter: brightness(0) saturate(0);*/
-*{mix-blend-mode: normal; }
 
---tranared: var(--fg);
---tranagreen: var(--fg);
+      /* filter: brightness(0) saturate(0);*/
+      * {
+        mix-blend-mode: normal;
+      }
+
+      --tranared: var(--fg);
+      --tranagreen: var(--fg);
+
       #red,
       #green {
         left: calc(50% + var(--scale) * 1.2 * var(--units));
@@ -55,9 +62,9 @@
         border-width: calc(var(--bsize)/1.5);
       }
 
-.satellite {
-display: none;
-}
+      .satellite {
+        display: none;
+      }
 
     }
 
@@ -227,15 +234,15 @@ display: none;
       text-align: center;
     }
 
-#ctrlbar:has(#fusion:checked) {
- ~ #slider {
-display: none;
-}
-~ #rangeout{
-display: none;
-}
-}
+    #ctrlbar:has(#fusion:checked) {
+      ~#slider {
+        display: none;
+      }
 
+      ~#rangeout {
+        display: none;
+      }
+    }
   </style>
 </head>
 
@@ -297,7 +304,7 @@ display: none;
     };
 
 
-    function fusiontoggle () {
+    function fusiontoggle() {
       if (fusion.checked) {
         document.documentElement.style.setProperty("--glyphscale", "0.33");
         // document.documentElement.style.setProperty("--saturate", "0");
@@ -312,14 +319,14 @@ display: none;
     }
 
 
-window.addEventListener("keydown", function (e) {
-  if (e.key === "f") {
-    e.preventDefault();
-    fusion.checked = !fusion.checked
-    fusiontoggle()
-  }
+    window.addEventListener("keydown", function (e) {
+      if (e.key === "f") {
+        e.preventDefault();
+        fusion.checked = !fusion.checked;
+        fusiontoggle();
+      }
 
-});
+    });
 
 
 
@@ -392,17 +399,17 @@ window.addEventListener("keydown", function (e) {
 
     });
 
-document.addEventListener("wheel", function(e) {
-if (e.deltaY <0) {
-//up
-          slider.value -= -(basestep*2);
-          movecircles(e);
-} else if (e.deltaY>0) {
-//down
-    slider.value -= basestep*2;
-  movecircles(e);
-}
-}, {passive:false});
+    document.addEventListener("wheel", function (e) {
+      if (e.deltaY < 0) {
+        //up
+        slider.value -= -(basestep * 2);
+        movecircles(e);
+      } else if (e.deltaY > 0) {
+        //down
+        slider.value -= basestep * 2;
+        movecircles(e);
+      }
+    }, { passive: false });
 
 
   </script>
