add table of contents

--- a/index.html
+++ b/index.html
@@ -52,94 +52,124 @@
     To view the code, contribute, or provide feedback, visit:<br />
     <a href="https://github.com/visiontherapy/visiontherapy.github.io">https://github.com/visiontherapy/visiontherapy.github.io</a>.
   </div>
+<hr/>
 
-  <h3><a href="cpsaccades.html">CP Saccades / Space Fixator / Red-Green delete</a></h3>
-  <ul>
-    <li>CP saccades:
-      <ul>
-        <li>Keep your eyes focused on the middle circle. Click the circle, or press the spacebar to display a the target marker/letter. Using your peripheral vision, locate the corresponding marker in one of the outer circles. Try to click the target marker without moving your eyes away from the central circle. A correct click will result in a green flash, and the central circle will advance to the next target marker. The central circle will flash red if the wrong target marker is clicked. </li>
-        <li>Instead of clicking the targets, you may use other means of identifying the target marker (eg, by placing a stick or physical pointer and verifying the correct target by looking there). In this case, press the space bar to advance the central marker to the next target.</li>
-        <li>Switch to Multicolor markers by selecting "Colorful" in the Color Mode dropdown menu</li>
-      </ul>
-    </li>
-    <li>Space Fixator (Look, Ready, Touch, Back):
-      <ul>
-        <li>Normal CP saccade display</li>
-        <li>Space Fixator with blank dots</li>
-        <li>Space Fixator with numeric labels</li>
-      </ul>
-    </li>
-    <li>Red/Green delete
-      <ul>
-        <li>Use Red/Green glasses</li>
-        <li>Select Red/Green in the Color Mode dropdown menu</li>
-        <li>Advanced Red+Green option for two-tone letter colors</li>
-      </ul>
+<ul>
+  <li><a href="#cp">CP Saccades / Space Fixator / Red-Green delete</a></li>
+  <li><a href="#hart">Hart Chart / Decoding</a></li>
+  <li><a href="#tracking">Letter Tracking</a></li>
+  <li><a href="#glyphs">Tranaglyphs / Fusion cards</a></li>
+  <li><a href="#lines">Line counting</a></li>
+  <li><a href="#blocks">Pattern Blocks</a></li>
+</ul>
 
-    </li>
+  <hr/>
 
-  </ul>
+  <h3 id="cp"><a href="cpsaccades.html">CP Saccades / Space Fixator / Red-Green delete</a></h3>
+  <div>
+    <ul>
+      <li>CP saccades:
+        <ul>
+          <li>Keep your eyes focused on the middle circle. Click the circle, or press the spacebar to display a the target marker/letter. Using your peripheral vision, locate the corresponding marker in one of the outer circles. Try to click the target marker without moving your eyes away from the central circle. A correct click will result in a green flash, and the central circle will advance to the next target marker. The central circle will flash red if the wrong target marker is clicked. </li>
+          <li>Instead of clicking the targets, you may use other means of identifying the target marker (eg, by placing a stick or physical pointer and verifying the correct target by looking there). In this case, press the space bar to advance the central marker to the next target.</li>
+          <li>Switch to Multicolor markers by selecting "Colorful" in the Color Mode dropdown menu</li>
+        </ul>
+      </li>
+      <li>Space Fixator (Look, Ready, Touch, Back):
+        <ul>
+          <li>Normal CP saccade display</li>
+          <li>Space Fixator with blank dots</li>
+          <li>Space Fixator with numeric labels</li>
+        </ul>
+      </li>
+      <li>Red/Green delete
+        <ul>
+          <li>Use Red/Green glasses</li>
+          <li>Select Red/Green in the Color Mode dropdown menu</li>
+          <li>Advanced Red+Green option for two-tone letter colors</li>
+        </ul>
+
+      </li>
+
+    </ul>
+  </div>
+
+  <h3 id="hart"><a href="hartchart.html">Hart Chart / Decoding</a></h3>
+  <div>
+    <ul>
+      <li>Read each letter at a steady pace.</li>
+      <li>Use metronome if needed, to maintain the pace.
+        <ul>
+          <li>Built in metronome may stutter occasionally as it is not 100% accurate</li>
+        </ul>
+      </li>
+      <li>Scan the QR code with a mobile device to mirror the chart to do the near/far accommodation exercise.</li>
+      <li>Decoding exercise
+        <ul>
+          <li>Work in progress</li>
+          <li>Corresponding row/column is highlighted when hovering over each code item.</li>
+          <li>Full answer is displayed when hovering over the code for a couple seconds.</li>
+        </ul>
+      </li>
+    </ul>
+  </div>
+
+  <h3 id="tracking><a href="lettertracking.html">Letter Tracking</a></h3>
+  <div>
+    <ul>
+      <li>Target word count of 70
+        <ul>
+          <li>If all letters are not shown within target word count, the script will continue generating words until all letters are accounted for.</li>
+        </ul>
+      </li>
+
+      <li>Allowable letter combinations taken from "wordbank".
+        <ul>
+          <li>This can be customized by entering any text into the wordbank input box.</li>
+          <li>If all letters are not present in the text, the script will show an error.</li>
+        </ul>
+      </li>
+      <li>"Level 2" option mixes capital and lowercase letters.</li>
+      <li>Use red/green glasses with "Red" mode.</li>
+    </ul>
+  </div>
 
 
-  <h3><a href="hartchart.html">Hart Chart</a></h3>
-  <ul>
-    <li>Read each letter at a steady pace.</li>
-    <li>Use metronome if needed, to maintain the pace.
-      <ul>
-        <li>Built in metronome may stutter occasionally as it is not 100% accurate</li>
-      </ul>
-    </li>
-    <li>Scan the QR code with a mobile device to mirror the chart to do the near/far accommodation exercise.</li>
-    <li>Decoding exercise
-      <ul>
-        <li>Work in progress</li>
-        <li>Corresponding row/column is highlighted when hovering over each code item.</li>
-        <li>Full answer is displayed when hovering over the code for a couple seconds.</li>
-      </ul>
-    </li>
-  </ul>
+  <h3 id="glyphs"><a href="tranaglyphs.html">Tranaglyphs / Fusion cards</a></h3>
+  <div>
+    <ul>
+      <li>Tranaglyphs:
+        <ul>
+          <li>Requires the use of red/green glasses. Red lens over right eye.</li>
+          <li>(Glyph images created using pure CSS.)</li>
+          <li>Adjust glyph separation distance with arrow keys or Page up/Page down keys keys. (PageDown/Left/Down toward convergence, PageUp/Up/Right toward divergence).</li>
+          <li>Use the calibration slider to adjust the distance between the two vertical lines so they are about 4 inches (10 cm) apart.</li>
+        </ul>
+      </li>
+      <li>Fusion Mode:
+        <ul>
+          <li>Simulate Fusion cards exercise. Glyphs will appear as black/white, separate to a fixed distance apart.</li>
+          <li>Use the calibrator to adjust the scale.</li>
+        </ul>
+      </li>
+    </ul>
+  </div>
 
-  <h3><a href="lettertracking.html">Letter Tracking exercise</a></h3>
-  <ul>
-    <li>Target word count of 70
-      <ul>
-        <li>If all letters are not shown within target word count, the script will continue generating words until all letters are accounted for.</li>
-      </ul>
-    </li>
+  <h3 id="lines"><a href="lines.html">Line counting</a></h3>
+  <div>
+    <ul>
+      <li>Line counting exercise.</li>
+      <li>Count the number of black bars and enter it in the box.</li>
+    </ul>
+  </div>
 
-    <li>Allowable letter combinations taken from "wordbank".
-      <ul>
-        <li>This can be customized by entering any text into the wordbank input box.</li>
-        <li>If all letters are not present in the text, the script will show an error.</li>
-      </ul>
-    </li>
-    <li>"Level 2" option mixes capital and lowercase letters.</li>
-    <li>Use red/green glasses with "Red" mode.</li>
-  </ul>
+  <h3 id="blocks"><a href="blocks.html">Pattern Blocks</a></h3>
+  <div>
+    <ul>
+      <li>Work in progress</li>
+    </ul>
+  </div>
 
-  <h3><a href="tranaglyphs.html">Tranaglyphs / Fusion cards</a></h3>
-  <ul>
-    <li>Tranaglyphs:
-      <ul>
-        <li>Requires the use of red/green glasses. Red lens over right eye.</li>
-        <li>(Glyph images created using pure CSS.)</li>
-        <li>Adjust glyph separation distance with arrow keys or Page up/Page down keys keys. (PageDown/Left/Down toward convergence, PageUp/Up/Right toward divergence).</li>
-        <li>Use the calibration slider to adjust the distance between the two vertical lines so they are about 4 inches (10 cm) apart.</li>
-      </ul>
-    </li>
-    <li>Fusion Mode:
-      <ul>
-        <li>Simulate Fusion cards exercise. Glyphs will appear as black/white, separate to a fixed distance apart.</li>
-        <li>Use the calibrator to adjust the scale.</li>
-      </ul>
-    </li>
-  </ul>
-
-  <h3><a href="lines.html">Line counting</a></h3>
-  <ul>
-    <li>Line counting exercise.</li>
-    <li>Count the number of black bars and enter it in the box.</li>
-  </ul>
 </body>
 
 </html>
