--- a/index.html
+++ b/index.html
@@ -35,6 +35,10 @@
       width: 1.5em;
       height: 1.5em;
     }
+
+    ul {
+      margin-top:0;
+    }
   </style>
 </head>
 
@@ -60,7 +64,7 @@
   <li><a href="#tracking">Letter Tracking</a></li>
   <li><a href="#glyphs">Tranaglyphs / Fusion cards</a></li>
   <li><a href="#lines">Line counting</a></li>
-  <!-- <li><a href="#blocks">Pattern Blocks</a></li> -->
+  <li><a href="#blocks">Pattern Blocks</a></li>
 </ul>
 
   <hr/>
@@ -162,14 +166,13 @@
       <li>Count the number of black bars and enter it in the box.</li>
     </ul>
   </div>
-<!--
-  <h3 id="blocks"><a href="blocks.html">Pattern Blocks</a></h3>
+ 
+  <h3 id="blocks">Pattern Blocks</h3>
   <div>
     <ul>
       <li>Work in progress</li>
     </ul>
   </div>
--->
 
 </body>
 
