--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </ul>
   </div>
  
-  <h3 id="blocks">Pattern Blocks</h3>
+  <h3 id="blocks"><a href="blocks.html">Pattern Blocks</a></h3>
   <div>
     <ul>
       <li>Work in progress</li>
