--- a/index.html
+++ b/index.html
@@ -171,6 +171,8 @@
   <div>
     <ul>
       <li>Work in progress</li>
+      <li>Drag tiles into the play area</li>
+      <li>Incorrectly placed tile will be tinted red.</li>
     </ul>
   </div>
 
